--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class='document-overlay-bg'></div>
 
 
-
+<a href="/java.docx">DOWNLOAD</a>
     <dialog inert class='modal modal-auth modal-signup' data-modal id='modal-signup' aria-labelledby='modal-signup-title'>
   <div class='modal__inner'>
     <h3 class='modal-auth__title title fsz-title-md fw-medium center max-ch-25' id='modal-signup-title'>Create an Account</h3>
